--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <div class="bg-white p-9 rounded-3xl w-full">
       <fieldset class="fieldset w-full text-base font-medium border-0">
         <legend class="fieldset-legend">Mobile Number</legend>
-        <input id="mobileNumber" type="text" class="input bg-[#F4F5F7] rounded-4xl" placeholder="Enter your number" />
+        <input id="mobile-number" type="text" class="input bg-[#F4F5F7] rounded-4xl" placeholder="Enter your number" />
         <legend class="fieldset-legend mt-5">4 Digit pin</legend>
-        <input id="pinNumber" type="text" class="input bg-[#F4F5F7] rounded-4xl" placeholder="Enter 4 Digit Pin" />
+        <input id="pin-number" type="text" class="input bg-[#F4F5F7] rounded-4xl" placeholder="Enter 4 Digit Pin" />
         <button id="loginButton" class="btn btn-primary mt-3 rounded-4xl">Login</button>
       </fieldset>
     </div>
