--- a/home.html
+++ b/home.html
@@ -37,12 +37,12 @@
     <p class="text-base/[26px] text-[#08080880] font-normal mt-3">Enjoy easy and convenient financial services with us.
       Cashout charge is low and </p>
     <div class="grid grid-cols-3 gap-4 py-6">
-      <div id="add_money"
+      <div id="add-money"
         class="px-2.5 py-5 border border-[#0808081a] flex flex-col items-center justify-center gap-y-2 rounded-xl cursor-pointer">
         <img src="./images/wallet1.png" alt="">
         <span class="text-sm/normal text-[#080808b3] font-normal">Add Money</span>
       </div>
-      <div id="cash_out"
+      <div id="cash-out"
         class="px-2.5 py-5 border-1 border-[#0808081a] flex flex-col items-center justify-center gap-y-2 rounded-xl cursor-pointer">
         <img src="./images/send1.png" alt="">
         <span class="text-sm/normal text-[#080808b3] font-normal">Cashout</span>
@@ -69,30 +69,53 @@
       </div>
     </div>
   </div>
-  <div class="latest-payment bg-[#F4F5F7] px-6 pb-7 mt-8">
-    <h2 class="text-[18px] text-[#080808e6] font-semibold mb-4">Add Money</h2>
-    <div class="flex items-center justify-center w-full">
-      <div class="bg-white p-9 rounded-3xl w-full">
-        <fieldset class="fieldset w-full text-base font-medium border-0">
-          <legend class="fieldset-legend">Select A Bank</legend>
-          <input id="bank-account" type="text" class="input bg-[#F4F5F7] rounded-4xl" placeholder="Select back"
-            list="browsers" />
-          <datalist id="browsers">
-            <option value="Sonali Bank"></option>
-            <option value="AB Bank"></option>
-            <option value="DBBL Bank"></option>
-            <option value="Rupali Bank"></option>
-            <option value="Krishi Bank"></option>
-          </datalist>
-          <legend class="fieldset-legend">Bank Account Number</legend>
-          <input id="account-number" type="text" class="input bg-[#F4F5F7] rounded-4xl"
-            placeholder="Enter 11 digit account number" />
-          <legend class="fieldset-legend">Amount to Add</legend>
-          <input id="add-amount" type="text" class="input bg-[#F4F5F7] rounded-4xl" placeholder="Enter amount to add" />
-          <legend class="fieldset-legend ">4 Digit pin</legend>
-          <input id="pin" type="text" class="input bg-[#F4F5F7] rounded-4xl" placeholder="Enter 4 Digit Pin" />
-          <button id="add-money-btn" class="btn btn-primary mt-3 rounded-4xl">Add Money</button>
-        </fieldset>
+
+  <div class="all-form-section">
+    <!-- Add money section -->
+    <div id="add-money-section" class="bg-[#F4F5F7] px-6 pb-7 mt-8 hidden">
+      <h2 class="text-[18px] text-[#080808e6] font-semibold mb-4">Add Money</h2>
+      <div class="flex items-center justify-center w-full">
+        <div class="bg-white p-9 rounded-3xl w-full">
+          <fieldset class="fieldset w-full text-base font-medium border-0">
+            <legend class="fieldset-legend">Select A Bank</legend>
+            <input id="bank-account" type="text" class="input bg-[#F4F5F7] rounded-4xl" placeholder="Select back"
+              list="browsers" />
+            <datalist id="browsers">
+              <option value="Sonali Bank"></option>
+              <option value="AB Bank"></option>
+              <option value="DBBL Bank"></option>
+              <option value="Rupali Bank"></option>
+              <option value="Krishi Bank"></option>
+            </datalist>
+            <legend class="fieldset-legend">Bank Account Number</legend>
+            <input id="account-number" type="text" class="input bg-[#F4F5F7] rounded-4xl"
+              placeholder="Enter 11 digit account number" />
+            <legend class="fieldset-legend">Amount to Add</legend>
+            <input id="add-amount" type="text" class="input bg-[#F4F5F7] rounded-4xl" placeholder="Enter amount to add" />
+            <legend class="fieldset-legend ">Pin Number</legend>
+            <input id="pin" type="text" class="input bg-[#F4F5F7] rounded-4xl" placeholder="Enter 4 Digit Pin" />
+            <button id="add-money-btn" class="btn btn-primary mt-3 rounded-4xl">Add Money</button>
+          </fieldset>
+        </div>
+      </div>
+    </div>
+
+    <!-- Cash out section -->
+    <div id="cash-out-section" class="bg-[#F4F5F7] px-6 pb-7 mt-8 hidden">
+      <h2 class="text-[18px] text-[#080808e6] font-semibold mb-4">Cash Out</h2>
+      <div class="flex items-center justify-center w-full">
+        <div class="bg-white p-9 rounded-3xl w-full">
+          <fieldset class="fieldset w-full text-base font-medium border-0">
+            <legend class="fieldset-legend">Agent Number</legend>
+            <input id="account-number" type="text" class="input bg-[#F4F5F7] rounded-4xl"
+              placeholder="Enter 11 digit agent number" />
+            <legend class="fieldset-legend">Amount</legend>
+            <input id="add-amount" type="text" class="input bg-[#F4F5F7] rounded-4xl" placeholder="Enter amount to withdraw" />
+            <legend class="fieldset-legend ">Pin Number</legend>
+            <input id="pin" type="text" class="input bg-[#F4F5F7] rounded-4xl" placeholder="Enter 4 Digit Pin" />
+            <button id="add-money-btn" class="btn btn-primary mt-3 rounded-4xl">Withdraw Money</button>
+          </fieldset>
+        </div>
       </div>
     </div>
   </div>
