Cash out functionality

--- a/home.html
+++ b/home.html
@@ -93,7 +93,7 @@
             <legend class="fieldset-legend">Amount to Add</legend>
             <input id="add-amount" type="text" class="input bg-[#F4F5F7] rounded-4xl" placeholder="Enter amount to add" />
             <legend class="fieldset-legend ">Pin Number</legend>
-            <input id="pin" type="text" class="input bg-[#F4F5F7] rounded-4xl" placeholder="Enter 4 Digit Pin" />
+            <input id="add-money-pin" type="text" class="input bg-[#F4F5F7] rounded-4xl" placeholder="Enter 4 Digit Pin" />
             <button id="add-money-btn" class="btn btn-primary mt-3 rounded-4xl">Add Money</button>
           </fieldset>
         </div>
@@ -107,13 +107,13 @@
         <div class="bg-white p-9 rounded-3xl w-full">
           <fieldset class="fieldset w-full text-base font-medium border-0">
             <legend class="fieldset-legend">Agent Number</legend>
-            <input id="account-number" type="text" class="input bg-[#F4F5F7] rounded-4xl"
+            <input id="agent-number" type="text" class="input bg-[#F4F5F7] rounded-4xl"
               placeholder="Enter 11 digit agent number" />
             <legend class="fieldset-legend">Amount</legend>
-            <input id="add-amount" type="text" class="input bg-[#F4F5F7] rounded-4xl" placeholder="Enter amount to withdraw" />
+            <input id="cash-out-amount" type="text" class="input bg-[#F4F5F7] rounded-4xl" placeholder="Enter amount to withdraw" />
             <legend class="fieldset-legend ">Pin Number</legend>
-            <input id="pin" type="text" class="input bg-[#F4F5F7] rounded-4xl" placeholder="Enter 4 Digit Pin" />
-            <button id="add-money-btn" class="btn btn-primary mt-3 rounded-4xl">Withdraw Money</button>
+            <input id="cash-out-pin" type="text" class="input bg-[#F4F5F7] rounded-4xl" placeholder="Enter 4 Digit Pin" />
+            <button id="cash-out-btn" class="btn btn-primary mt-3 rounded-4xl">Withdraw Money</button>
           </fieldset>
         </div>
       </div>
