--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Payoo MFS</title>
+  <title>Login page</title>
   <!-- daisy UI CDN -->
   <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
   <!-- Tailwindcss CDN -->
@@ -14,7 +14,7 @@
 
 <body class="bg-[#F4F5F7] h-dvh flex flex-col items-center justify-center max-w-100 mx-auto px-6">
   <div class="w-[300px] h-[150px] bg-[url(./images/bg.png)] bg-cover flex justify-center items-center">
-    <a href="file:///E:/practis/payoo-mfs/home.html">
+    <a href="file:///E:/practis/mfs-payoo/home.html">
       <img class="" src="./images/Group.png" alt="">
     </a>
   </div>
