--- a/home.html
+++ b/home.html
@@ -160,7 +160,7 @@
     </div>
 
     <!-- Pay bill section -->
-    <div id="pay-bill-section" class="bg-[#F4F5F7] px-6 pb-7 mt-8">
+    <div id="pay-bill-section" class="bg-[#F4F5F7] px-6 pb-7 mt-8 hidden">
       <h2 class="text-[18px] text-[#080808e6] font-semibold mb-4">Pay Bill</h2>
       <div class="flex items-center justify-center w-full">
         <div class="bg-white p-9 rounded-3xl w-full">
@@ -189,7 +189,60 @@
       </div>
     </div>
 
-    
+    <!-- Transactions section -->
+    <div id="transactions-section" class="bg-[#F4F5F7] px-6 pb-7 mt-8">
+      <div class="flex items-center justify-between mb-4">
+        <h2 class="text-[18px] text-[#080808e6] font-semibold">Transaction History</h2>
+        <span class="text-sm/normal text-[#08080880] font-normal">View All</span>
+      </div>
+      
+      <div class="flex flex-col-reverse gap-y-3">
+        <div class="px-4 py-3 border border-[#0808081a] bg-white rounded-xl flex items-center justify-between">
+          <div class="flex items-center gap-x-2">
+            <picture class="w-11 h-11 bg-[#0808080d] flex items-center justify-center rounded-full"><img
+                src="./images/wallet1.png" alt=""></picture>
+            <div>
+              <h4 class="text-base/normal text-[#080808b3] font-semibold">Electricity Bill</h4>
+              <span class="text-xs/normal text-[#080808b3] font-normal">Today 01:44 AM</span>
+            </div>
+          </div>
+          <div><i class="fa-solid fa-ellipsis-vertical text-[#080808b3] text-2xl"></i></div>
+        </div>
+        <div class="px-4 py-3 border border-[#0808081a] bg-white rounded-xl flex items-center justify-between">
+          <div class="flex items-center gap-x-2">
+            <picture class="w-11 h-11 bg-[#0808080d] flex items-center justify-center rounded-full"><img
+                src="./images/wallet1.png" alt=""></picture>
+            <div>
+              <h4 class="text-base/normal text-[#080808b3] font-semibold">Bank Deposit</h4>
+              <span class="text-xs/normal text-[#080808b3] font-normal">Today 01:44 AM</span>
+            </div>
+          </div>
+          <div><i class="fa-solid fa-ellipsis-vertical text-[#080808b3] text-2xl"></i></div>
+        </div>
+        <div class="px-4 py-3 border border-[#0808081a] bg-white rounded-xl flex items-center justify-between">
+          <div class="flex items-center gap-x-2">
+            <picture class="w-11 h-11 bg-[#0808080d] flex items-center justify-center rounded-full"><img
+                src="./images/wallet1.png" alt=""></picture>
+            <div>
+              <h4 class="text-base/normal text-[#080808b3] font-semibold">Mobile Recharge</h4>
+              <span class="text-xs/normal text-[#080808b3] font-normal">Today 01:44 AM</span>
+            </div>
+          </div>
+          <div><i class="fa-solid fa-ellipsis-vertical text-[#080808b3] text-2xl"></i></div>
+        </div>
+        <div class="px-4 py-3 border border-[#0808081a] bg-white rounded-xl flex items-center justify-between">
+          <div class="flex items-center gap-x-2">
+            <picture class="w-11 h-11 bg-[#0808080d] flex items-center justify-center rounded-full"><img
+                src="./images/wallet1.png" alt=""></picture>
+            <div>
+              <h4 class="text-base/normal text-[#080808b3] font-semibold">Gas Bill</h4>
+              <span class="text-xs/normal text-[#080808b3] font-normal">Today 01:44 AM</span>
+            </div>
+          </div>
+          <div><i class="fa-solid fa-ellipsis-vertical text-[#080808b3] text-2xl"></i></div>
+        </div>
+      </div>
+    </div>
     <script src="./script/home.js"></script>
 </body>
 
