--- a/home.html
+++ b/home.html
@@ -28,8 +28,11 @@
       </div>
     </div>
     <div class="button">
-      <button class="btn text-sm/normal text-[#08080880]"><i class="fa-solid fa-arrow-right-from-bracket"></i>Log
-        Out</button>
+      <a href="index.html" class="button">
+        <button class="btn text-sm/normal text-[#08080880]">
+          <i class="fa-solid fa-arrow-right-from-bracket"></i>Log Out
+        </button>
+      </a>
     </div>
   </div>
   <div class="bg-white px-6 pt-8 rounded-b-3xl">
@@ -199,7 +202,7 @@
         <!-- Transaction items will be appended here dynamically -->
       </div>
     </div>
-    
+
     <script src="./script/home.js"></script>
 </body>
 
